migrate one runtimes endpoint