@@ -10,11 +10,11 @@ import org.broadinstitute.dsde.workbench.client.leonardo.ApiClient;
 import org.broadinstitute.dsde.workbench.client.leonardo.api.AppsApi;
 import org.broadinstitute.dsde.workbench.client.leonardo.api.DisksApi;
 import org.broadinstitute.dsde.workbench.client.leonardo.api.ResourcesApi;
+import org.broadinstitute.dsde.workbench.client.leonardo.api.RuntimesApi;
 import org.broadinstitute.dsde.workbench.client.leonardo.api.ServiceInfoApi;
 import org.pmiops.workbench.auth.ServiceAccounts;
 import org.pmiops.workbench.auth.UserAuthentication;
 import org.pmiops.workbench.exceptions.ServerErrorException;
-import org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi;
 import org.pmiops.workbench.notebooks.api.JupyterApi;
 import org.pmiops.workbench.notebooks.api.ProxyApi;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -26,6 +26,7 @@ import org.springframework.web.context.annotation.RequestScope;
 public class LeonardoConfig {
   public static final String USER_RUNTIMES_API = "userRuntimesApi";
   public static final String SERVICE_RUNTIMES_API = "svcRuntimesApi";
+  public static final String LEGACY_USER_RUNTIMES_API = "legacyUserRuntimesApi";
 
   public static final String USER_DISKS_API = "userDisksApi";
   public static final String SERVICE_DISKS_API = "serviceDisksApi";
@@ -37,6 +38,7 @@ public class LeonardoConfig {
   // Identifiers for the Swagger2 APIs for Jupyter and Welder, used for creating/localizing files.
   private static final String USER_NOTEBOOKS_CLIENT = "notebooksApiClient";
   private static final String SERVICE_NOTEBOOKS_CLIENT = "notebooksSvcApiClient";
+
   // Identifiers for the new OAS3 APIs from Leonardo. These should be used for runtimes access.
   private static final String USER_LEONARDO_CLIENT = "leonardoApiClient";
   private static final String SERVICE_LEONARDO_CLIENT = "leonardoServiceApiClient";
@@ -47,8 +49,7 @@ public class LeonardoConfig {
 
   private static final Logger log = Logger.getLogger(LeonardoConfig.class.getName());
 
-  private static final List<String> NOTEBOOK_SCOPES =
-      ImmutableList.of(
+  private static final List<String> NOTEBOOK_SCOPES = List.of(
           "https://www.googleapis.com/auth/userinfo.profile",
           "https://www.googleapis.com/auth/userinfo.email");
 
@@ -132,10 +133,16 @@ public class LeonardoConfig {
 
   @Bean(name = USER_RUNTIMES_API)
   @RequestScope(proxyMode = ScopedProxyMode.DEFAULT)
-  public RuntimesApi runtimesApi(
-      @Qualifier(LEGACY_USER_LEONARDO_CLIENT)
-          org.pmiops.workbench.legacy_leonardo_client.ApiClient apiClient) {
+  public RuntimesApi runtimesApi(@Qualifier(USER_LEONARDO_CLIENT) ApiClient apiClient) {
     RuntimesApi api = new RuntimesApi();
+    api.setApiClient(apiClient);
+    return api;
+  }
+
+  @Bean(name = LEGACY_USER_RUNTIMES_API)
+  @RequestScope(proxyMode = ScopedProxyMode.DEFAULT)
+  public org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi legacyRuntimesApi(@Qualifier(LEGACY_USER_LEONARDO_CLIENT) org.pmiops.workbench.legacy_leonardo_client.ApiClient apiClient) {
+    org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi api = new org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi();
     api.setApiClient(apiClient);
     return api;
   }
@@ -176,10 +183,10 @@ public class LeonardoConfig {
 
   @Bean(name = SERVICE_RUNTIMES_API)
   @RequestScope(proxyMode = ScopedProxyMode.DEFAULT)
-  public RuntimesApi serviceRuntimesApi(
+  public org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi serviceRuntimesApi(
       @Qualifier(LEGACY_SERVICE_LEONARDO_CLIENT)
           org.pmiops.workbench.legacy_leonardo_client.ApiClient apiClient) {
-    RuntimesApi api = new RuntimesApi();
+    org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi api = new org.pmiops.workbench.legacy_leonardo_client.api.RuntimesApi();
     api.setApiClient(apiClient);
     return api;
   }
